fix bug with auto-width column - text wrapping too soon

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -889,6 +889,8 @@ $layout-nav-width-offset: 15px;
     }
     &.columns-width-auto {
         .content-column {
+            flex: none;
+
             @include flexbox-grow(0);
         }
     }
